src/argocd/bootstrap-resources/frigate/cam03/ingresses.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate-cam03
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cam03.ryanb.tv`)
      kind: Rule
      services:
        - name: frigate-cam03
          kind: Service
          port: http
  tls: {}
